	  logic from mksyscall.c into files where it can be shared.
	* tools/mksymtab.c:  Add a tool that can be used to convert a CSV file
	  into a NuttX-style symbol table.
	* sched/work_cancel.c:  Fix a bad assertion (reported by Mike Smith)
	* configs/stm3210e-eval/src/up_idle.c:  Correct some power management
	  compilation errors (reported by Diego Sanchez).
	* include/nuttx/wqueue.h, sched/work*, and others:  Added logic to support
	  a second, lower priority work queue (CONFIG_SCHED_LPWORK).
	* arch/arm/src/stm32/stm32_dma.c, chip/stm32*_memorymap.h:  FSMC SRAM is
	  only 16-bits wide and the SDIO DMA must be set up differently.
	* arch/arm/src/stm32/stm32_dma.c:  Back out the 16-bit DMA change. It
	  is incorrect.
	* configs/:  Make use of UART4/5 vs USART4/5 consistent in all places.
	* Kconfig: Serial 2STOP setting must be integer 0/1, not a boolean.
	* lib/misc/sendfile.c and include/sys/sendfile.h:  Add a Linux style
	  sendfile() (non-standard!)
	* Kconfig: Refactor serial settings (moved from chip to drivers/serial).
	  AVR "teensy" now builds with Kconfig (contributed by Richard Cochran).
	* Kconfig: Add configuration settings for the LPC17xx
	* Kconfig: Add configuration settings for the LM3S (from Richard Cochran).
	* Kconfig: Verify configuration settings for the STM32.  This includes
	  changes in the way that the external SRAM is configured:  Define
	  CONFIG_HEAP2_SIZE (decimal) instead of CONFIG_HEAP2_END (hex).
	* tools/configure.sh:  Don't append the apps directory path setting
	  if the correct setting is already in defined in the defconfig file.
	* fs/fat/fs_utils.c:  Improper constructed bool expression.  This
	  would cause many unnecessary writes to FLASH (Thanks Ronen Vainish).
	* Kconfig: Verify configuration settings for the LPC43xx.  This includes
	  some corrections to configuration variable names and defconfig settings.
	* Kconfig: Add and verify configuration settings for the LPC31xx.
